--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
     implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever-core:1.0.15'
     implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever-native:1.0.15'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
 }
