--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever-core:1.0.15'
     implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever-native:1.0.15'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
 }
